# carmen-core

./: .travis.yml  Cargo.toml  index.js  package.json  profile_osx.sh
benches/: prod_data.rs
native/: Cargo.toml
native/src/: fuzzy_phrase.rs  gridstore.rs  lib.rs
rust-src/src/gridstore/: builder.rs  coalesce.rs  common.rs  mod.rs  spatial.rs  stackable.rs  store.rs
src/gridstore/: builder.rs  store.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: coalesce_test.rs
tests/bindings/: fuzzy_phrase.js  test.js
